Move token & target link gen inside link / login start methods
To implement PKCE, will need to generate and store a secret in the DB at
link / login start and include the hashed secret in the target URI. This
is step one towards that:

* for linking, move the state and URI generation inside the core logic,
which is also where we'll generate the PKCE secret and add it to the
URI. The unhashed secret shouldn't be exposed outside the core logic.
* for login, create a new method that is the equivalent of the link
start method except that the user is unknown (which is enough of a
difference it makes merging the methods problematic, so they're separate
for now, although their constiuent parts are reasonably DRY)

This also means we can store the state value in the DB rather than a
cookie for link / login, which'll be in the next PR.